--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,11 +1,13 @@
 version: "3"
 
+includes:
+  podman: ./podman
+
 tasks:
   mockgen:
     desc: "Generate mock implementations for interfaces"
     cmds:
       - go install go.uber.org/mock/mockgen@latest
       - mockgen -destination=internal/mocks/mocks_database.go -package=mocks gophermart/internal/repository DatabaseRepository
-      
-
+  
   
